[package]
name = "bare"
version = "0.1.0"
edition = "2021"

# Specify a target

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.155"
serde_json = "1.0.94"
pcap = "1.0"
libc = "0.2.141"
chrono = "0.4.26"

[dependencies.pnet]
version = "0.34.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata]
authors = ["Dene Farrell dene.farrell@gmail.com"]


license = "MIT OR Apache-2.0"
description = "Get components of IP packets for downstream processing"
repository = "https://github.com/dfarrel1/bare"
readme = "README.md"


exclude = [
    "*.py",
    "requirements.txt",
    ".ignore",
    ".gitignore",
    "*.json", # Cannot exclude .cargo_vcs_info.json, .rutc_info.json etc
    ".cargo_vcs_info.json", # Cannot exclude .cargo_vcs_info.json
    ".github/",
    "data/",
    "CHANGELOG.md",
]



