[package]
name = "peeler"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Get components of IP packets for downstream processing"
repository = "https://github.com/dfarrel1/peeler"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
]
build = "build.rs"

[dependencies]
etherparse = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.155"
serde_json = "1.0.94"
pcap = "1.1.0"
libc = "0.2.141"
chrono = "0.4.26"
base64 = "0.21"

[dev-dependencies]
pnet = "0.34.0"

[features]
static_linking = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[target.'cfg(target_arch = "x86_64")'.build-dependencies]
cc = "1.0"

[target.'cfg(target_arch = "aarch64")'.build-dependencies]
cc = "1.0"

[package.metadata]
authors = ["Dene Farrell dene.farrell@gmail.com"]





